--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
             margin: 0;
             padding: 0;
         }
-
-        canvas {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
     </style>
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <!-- <canvas id="canvas"></canvas> -->
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@<version>/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@<version>/examples/jsm/"
+          }
+        }
+        </script>
     <script type="module" src="script.js"></script>
 </body>
 
